# UtilityFog-Fractal-TreeOpen

./: .coverage  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  AGENT_HANDOFF.md  BACKEND_PROVIDER_MATRIX.md  CHANGELOG.md  CODEOWNERS  Dockerfile  LOCAL_OLLAMA_SMOKE_TEST.md  Makefile  PHASE_17B.md  PHASE_18.md  PHASE_19_NEXTNESS_OBSERVER.md  PHASE_19_PR3_METRICS_PIPELINE.md  PHASE_19_PR4_CALIBRATION.md  PHASE_19_PR4_CALIBRATION_SUMMARY.md  PHASE_19_SECOND_PASS_CALIBRATION_PLAN.md  README.md  README_FT008.md  README_FT009.md  README_FT010.md  ROADMAP.md  SECURITY.md  TRINITY_BRIEFING_v075.md  _test_phase106.py  agent_safety-opa-fix.patch  backend_test.py  backend_test_8003.py  cluster_config.yaml  coverage.xml  demo_test.py  filelist.txt  final_test.py  index.html  latest.html  main_simulation.py  mkdocs.yml  (+14 more)
.github/: .ci-bump  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch_protection.md  dependabot.yml  pull_request_template.md
UtilityFog_Agent_Package/: PACKAGE_STATUS.md  config.yaml
agent/: evolution_engine.py  foglet_agent.py  ising_tempering.py  meme_structure.py  network_topology.py  simulation_metrics.py
algorithms/: README.md  meme_propagation.md  mindfulness_protocol.md  replication_rules.md
automation-feed/: v0.1.0-ga-release-final.md  v0.1.0-rc1-release-summary.md
config/: agent_limits.yaml  feature_flags.json
crates/uft_ca/: Cargo.toml  pyproject.toml
crates/uft_ca/benches/: counter_rng.rs  stepping.rs
crates/uft_ca/benches/support/: counter_rng.rs
crates/uft_ca/src/: filters.rs  genome.rs  lib.rs  memory.rs  metrics.rs  params.rs  phase4.rs  phase6a.rs  phase6b.rs  phase6c.rs  rng_util.rs  stepper.rs  voxel_lattice.rs  wasm_bindings.rs
crates/uft_ca/tests/: counter_rng_lab.rs
crates/vanguard-mcp/: Cargo.toml  README.md  build.rs
crates/vanguard-mcp/proto/: cluster.proto
crates/vanguard-mcp/src/: acoustic_hydrotropism.rs  dark_energy.rs  four_immeasurables.rs  gpu_router.rs  hyper_agent.rs  lucid_ui.rs  main.rs  mcp_handler.rs  proprioception.rs  superdeterminism.rs  task_queue.rs  watchdog.rs
crates/vanguard-mcp/src/cuda/: engram_pantry.cu  lucid_dreaming.cu  mod.rs
data/: medusa_lucid.html  organism_v075_phase6c.genome.json
docs/: COUNTER_INDEXED_RNG_FEASIBILITY.md  DESIGN_PHILOSOPHY.md  FLEXIBLE_POLYHEDRA_COMPLIANT_TRAP_INTAKE.md  ISSUE_165_COVERAGE_BROADENING_PLAN.md  ISSUE_165_TIER3_PLAN.md  ISSUE_165_TIER4_TEST_STATUS_REPORT.md  LANE_A_READINESS_REVIEW.md  LEGACY_ORCHESTRATOR_QUARANTINE.md  LOCAL_MODEL_DEPLOYMENT_INCEPTION.md  MATURIN_ARC_THEORY_PREFLIGHT.md  MEDUSA_THEORY_INTAKE_LEDGER.md  NEXTNESS_ARTIFACT_VALIDATION_CONTRACT.md  NEXTNESS_CLI_FAILURE_CONTRACTS.md  NEXTNESS_CONTRACT_GUARD.md  NEXTNESS_EVALUATOR_CONTRACT.md  NEXTNESS_EVIDENCE_CAMPAIGN_CONTRACT.md  NEXTNESS_EVIDENCE_PACKET_CONTRACT.md  NEXTNESS_MONITOR_CONTRACT.md  NEXTNESS_PREDICTION_BASELINE.md  NEXTNESS_REPLAY_LAB_CONTRACT.md  OBSERVABILITY.md  PROJECT_LOG.md  REPOSITORY_HEALTH_AUDIT_2026-06.md  RESEARCH_INDEX.md  SECURITY_AUTOMATION_SALVAGE_PLAN_2026-06.md  SWARM_HUNTER_V1_PREFLIGHT.md  TELEMETRY.md  THEORY_TRIPWIRE_ACTION_DESIGN.md  TRAINED_ATTENTION_SYSTEMS_INCEPTION.md  VANGUARD_CLUSTER_SETUP.md  VISUALIZATION.md  WORKSTREAM_B_CANDIDATE_SELECTION.md  WORKSTREAM_B_EMPIRICAL_PROFILING_RESULTS.md  WORKSTREAM_B_PREDICATE_AGGREGATOR_REVIEW.md  WORKSTREAM_C_VOCABULARY_STATUS_REVIEW.md  agent-safety-policy.md  experimental_phase3_modules.md  index.md  quickstart.md  troubleshooting.md  (+1 more)
fixtures/: allow_case.json  deny_case_intent.json  deny_case_limits.json
policy/: agent_safety.rego  agent_safety_test.rego
schemas/: portable_genome_v1.json
scripts/: acoustic_map.py  agent_kill_switch.sh  continuous_evolution.py  continuous_evolution_ca.py  dandelion.py  dandelion_physics.py  event_bus.py  geometry_daemon.py  gpu_accelerator.py  gpu_benchmark.py  grokking_run.py  hibernation.py  lucid_server.py  medusa_api.py  medusa_start.py  nemoclaw_tools.json  nextness_artifact_validation.py  nextness_calibration.py  nextness_evaluator.py  nextness_evidence_packet.py  nextness_metrics.py  nextness_monitor.py  nextness_observer.py  nextness_predictor.py  nextness_replay_lab.py  orchestrator.py  orchestrator_config.py  params_schema.py  phase11.py  portable_genome.py  run_v070_engine.py  shard_protocol.py  shard_transport_zmq.py  tuning_api.py  watchdog.py  workstream_b_profile_predicates.py
site/: index.html  search.html  sitemap.xml
spec/: README.md
specs/: SPEC_README.md  fractal-tree-mvp.spec.md  plan.fractal-tree-mvp.md  tasks.fractal-tree-mvp.md
test_results/: test_results_5_tests.csv
testing_framework/: __init__.py  loggers.py  reporters.py  simulation_runner.py  test_runner.py  validators.py
tests/: __init__.py  test_agent_backend.py  test_anthropic_backend.py  test_ca_replicate.py  test_cli_viz.py  test_continuous_evolution_ca.py  test_dandelion.py  test_differentiation_fitness.py  test_energy_health_writeback.py  test_event_bus.py  test_evolution_convergence.py  test_feature_flags.py  test_foglet_agent.py  test_fractal_topologies.py  test_graph_stepping.py  test_ising_tempering.py  test_medusa_api.py  test_medusa_start.py  test_multi_state_stepping.py  test_nextness_artifact_validation.py  test_nextness_calibration.py  test_nextness_contracts.py  test_nextness_evaluator.py  test_nextness_evidence_packet.py  test_nextness_metrics.py  test_nextness_monitor.py  test_nextness_observer.py  test_nextness_predictor.py  test_nextness_replay_lab.py  test_observability.py  test_observatory.py  test_observatory_loader_order.py  test_openai_compat_backend.py  test_orchestrator.py  test_parallel_stepping.py  test_params_schema.py  test_policy_check_cli.py  test_portable_genome.py  test_provider_parity.py  test_pt_ladder_pairing.py  (+9 more)
utilityfog_fractal_treeopen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
utilityfog_frontend/: README.txt  main_simulation.py  quantum_myelin.py  run_server.py  run_test_batches.py  sample_integration.py  start_server.sh
utilityfog_test_orchestrator/: run_test_batches.py
(+423 files in other folders)
