[package]
name = "vanguard-mcp"
version = "0.1.0"
edition = "2021"
authors = ["UtilityFog Team"]
description = "MCP server for Vanguard SOC GPU cluster orchestration"
license = "MIT OR Apache-2.0"

[[bin]]
name = "vanguard-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.11"
prost = "0.12"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5"
tokio-stream = "0.1.18"

[build-dependencies]
tonic-build = "0.11"
